--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,10 +83,12 @@ dependency_overrides:
     git:
       url: https://github.com/alexmercerind/bitsdojo_window.git
       path: bitsdojo_window_windows
+      ref: 5e6ddd4b58bb357b23541181b4188ce5892ba7a3
   bitsdojo_window_linux:
     git:
       url: https://github.com/alexmercerind/bitsdojo_window.git
       path: bitsdojo_window_linux
+      ref: 5e6ddd4b58bb357b23541181b4188ce5892ba7a3
   platform: ^3.1.0
 
 dev_dependencies:
