--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "external/libmpv.dart"]
 	path = external/libmpv.dart
-	url = https://github.com/alexmercerind/libmpv.dart.git
+	url = https://github.com/harmonoid/libmpv.dart.git
 [submodule "external/smtc-win32"]
 	path = external/smtc-win32
 	url = https://github.com/alexmercerind/smtc-win32.git
