--- a/.gitmodules
+++ b/.gitmodules
@@ -3,10 +3,10 @@
 	url = https://github.com/harmonoid/libmpv.dart.git
 [submodule "external/smtc-win32"]
 	path = external/smtc-win32
-	url = https://github.com/alexmercerind/smtc-win32.git
+	url = https://github.com/harmonoid/smtc-win32.git
 [submodule "external/harmonoid_visual_assets"]
 	path = external/harmonoid_visual_assets
-	url = https://github.com/alexmercerind/harmonoid_visual_assets.git
+	url = https://github.com/harmonoid/harmonoid_visual_assets
 [submodule "external/mpris_service.dart"]
 	path = external/mpris_service.dart
-	url = https://github.com/alexmercerind/mpris_service.dart
+	url = https://github.com/harmonoid/mpris_service.dart.git
