--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Plugins maintained by github.com/alexmercerind or proprietary to the Harmonoid.
+  # Plugins maintained by github.com/alexmercerind or are part of the Harmonoid project.
 
   libmpv:
     path: external/libmpv.dart
