--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   implicitly_animated_reorderable_list: ^0.4.0-dev+4
   collection: any
   substring_highlight: ^1.0.33
+  extended_image: ^6.0.1
 
   # Forked plugins & packages to meet requirements.
 
