--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -59,7 +59,7 @@ jobs:
           files: |
             Output/harmonoid-windows-setup.exe
             harmonoid-windows-exe.zip
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.ACCESS_TOKEN }}
       - name: Release Nightly
         uses: softprops/action-gh-release@v1
         env:
@@ -73,7 +73,7 @@ jobs:
           files: |
             Output/harmonoid-windows-setup.exe
             harmonoid-windows-exe.zip
-          token: ${{ secrets.ACCESS_TOKEN }}
+          token: ${{ secrets.ACCESS_TOKEN_2 }}
 
   build_linux:
     name: Harmonoid Linux
@@ -128,7 +128,7 @@ jobs:
           body: ""
           tag_name: "vnext"
           files: harmonoid-linux-*
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.ACCESS_TOKEN }}
       - name: Release Nightly
         uses: softprops/action-gh-release@v1
         env:
@@ -140,7 +140,7 @@ jobs:
           body: ${{ github.sha }}
           tag_name: ${{ steps.vars.outputs.sha_short }}
           files: harmonoid-linux-*
-          token: ${{ secrets.ACCESS_TOKEN }}
+          token: ${{ secrets.ACCESS_TOKEN_2 }}
 
   build_android:
     name: Harmonoid Android
@@ -190,4 +190,4 @@ jobs:
           tag_name: "vnext"
           files: |
             harmonoid-android.apk
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.ACCESS_TOKEN }}
