linux: fix exec property in desktop entry

--- a/linux/debian/usr/share/applications/harmonoid.desktop
+++ b/linux/debian/usr/share/applications/harmonoid.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Harmonoid
 Comment=Elegant music app to play & manage music library.
 Icon=harmonoid
-Exec=harmonoid
+Exec=harmonoid %f
 StartupWMClass=harmonoid
 Terminal=false
 Categories=AudioVideo;Audio;Player;Music;
