--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
     git:
       url: https://github.com/alexmercerind/flutter_media_metadata.git
       ref: harmonoid
+  youtube_music:
+    git:
+      url: https://github.com/harmonoid/youtube_music.dart.git
+      ref: c906b3525aa66b3dbcf1870afabfee2e8db21ab8
 
   # Third-party plugins.
 
