--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: harmonoid
 description: Elegant music app to play & manage music library.
 publish_to: "none"
-version: 0.2.1+5003
+version: 0.2.2+5003
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
@@ -56,6 +56,7 @@ dependencies:
   animations: ^2.0.0
   palette_generator: ^0.3.2
   draggable_scrollbar: ^0.1.0
+  readmore: ^2.1.0
   fluentui_system_icons: ^1.1.136
   material_floating_search_bar: ^0.3.6
   implicitly_animated_reorderable_list: ^0.4.0-dev+4
@@ -131,7 +132,7 @@ flutter:
           weight: 900
 
 msix_config:
-  msix_version: 0.2.1.0
+  msix_version: 0.2.2.0
   display_name: Harmonoid
   identity_name: com.alexmercerind.harmonoid
   file_extension: ogg, ogx, aac, m4a, mp3, wma, wav, aiff, flac, opus
