deps: add infinite_scroll_pagination & fetch latest upstream

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,6 @@
 [submodule "external/mpris_service.dart"]
 	path = external/mpris_service.dart
 	url = https://github.com/harmonoid/mpris_service.dart.git
-[submodule "external/youtube_music.dart"]
-	path = external/youtube_music.dart
-	url = https://github.com/harmonoid/youtube_music.dart
+[submodule "external/ytm_client.dart"]
+	path = external/ytm_client.dart
+	url = https://github.com/harmonoid/ytm_client.dart
