--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
     git:
       url: https://github.com/alexmercerind/known_extents_list_view_builder.git
   auto_size_text: ^3.0.0
+  uuid: ^3.0.6
 
 dependency_overrides:
   bitsdojo_window_windows:
