--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,11 @@ dependencies:
   path: ^1.8.0
   provider: ^6.0.1
   animations: ^2.0.0
-  palette_generator: ^0.3.2
+  palette_generator:
+    git:
+      url: https://github.com/alexmercerind/flutter_packages
+      path: packages/palette_generator
+      ref: main
   draggable_scrollbar: ^0.1.0
   infinite_scroll_pagination: ^3.1.0
   readmore: ^2.1.0
