--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -24,6 +24,7 @@ jobs:
         run: echo ${{ steps.vars.outputs.sha_short }}
       - uses: subosito/flutter-action@v1
         with:
+          flutter-version: "3.0.0"
           channel: "stable"
 
       - run: flutter config --enable-windows-desktop
