chore: add preloaded visuals & update translations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -134,6 +134,7 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/translations/
+    - assets/preloaded_visuals/
   fonts:
     - family: "Inter"
       fonts:
