build(fix): android

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,3 +29,9 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+configurations.all {
+    resolutionStrategy {
+        force 'androidx.core:core-ktx:1.6.0'
+    }
+
