--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,8 @@ task clean(type: Delete) {
 
 configurations.all {
     resolutionStrategy {
+        force 'androidx.core:core:1.6.0'
         force 'androidx.core:core-ktx:1.6.0'
+        force 'androidx.appcompat:appcompat:1.3.1'
     }
 }
