--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,3 +73,11 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
+configurations.all {
+    resolutionStrategy {
+        force 'androidx.core:core:1.6.0'
+        force 'androidx.core:core-ktx:1.6.0'
+        force 'androidx.appcompat:appcompat:1.3.1'
+    }
+}
