--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,7 +89,7 @@ dependencies:
     git:
       url: https://github.com/alexmercerind/bitsdojo_window.git
       path: bitsdojo_window
-      ref: master
+      ref: e0f7c46e94a75aea957574148459879a83fa3bbb
   hotkey_manager:
     git:
       url: https://github.com/alexmercerind/hotkey_manager.git
@@ -107,17 +107,17 @@ dependency_overrides:
     git:
       url: https://github.com/alexmercerind/bitsdojo_window.git
       path: bitsdojo_window_windows
-      ref: master
+      ref: e0f7c46e94a75aea957574148459879a83fa3bbb
   bitsdojo_window_linux:
     git:
       url: https://github.com/alexmercerind/bitsdojo_window.git
       path: bitsdojo_window_linux
-      ref: master
+      ref: e0f7c46e94a75aea957574148459879a83fa3bbb
   bitsdojo_window_macos:
     git:
       url: https://github.com/alexmercerind/bitsdojo_window.git
       path: bitsdojo_window_macos
-      ref: master
+      ref: e0f7c46e94a75aea957574148459879a83fa3bbb
   platform: ^3.1.0
 
 dev_dependencies:
