build(deps): add flutter_platform_alert

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,10 @@ dependencies:
 
   # Third-party plugins.
 
+  flutter_window_close: ^0.2.2
+  flutter_platform_alert: ^0.3.0
   share_plus: ^2.1.4
-  url_launcher: ^6.0.3
+  url_launcher: ^6.1.3
   permission_handler: ^6.1.1
   filepicker_windows: ^2.0.0
   flutter_local_notifications: ^5.0.0
@@ -53,7 +55,6 @@ dependencies:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/file_selector/file_selector_linux
-  flutter_window_close: ^0.2.2
 
   # Third-party UI widgets or "pure-dart" packages.
 
