--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,14 @@ dependencies:
 
   # Third-party plugins.
 
+  just_audio: ^0.9.28
+  audio_service: ^0.18.7
+  alert: ^2.0.1
+  awesome_notifications: ^0.7.0-beta.5
   share_plus: ^2.1.4
   url_launcher: ^6.1.3
   permission_handler: ^6.1.1
   filepicker_windows: ^2.0.0
-  flutter_local_notifications: ^5.0.0
-  just_audio: ^0.9.28
-  audio_service: ^0.18.7
   file_picker: ^3.0.0
   file_selector: ^0.8.2
   file_selector_linux:
