--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "external/safe_session_storage"]
 	path = external/safe_session_storage
 	url = https://github.com/harmonoid/safe_session_storage.git
+[submodule "external/media_library"]
+	path = external/media_library
+	url = https://github.com/alexmercerind/media_library.git
