--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,6 +72,7 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "net.sourceforge.streamsupport:android-retrofuture:1.7.2"
 }
 
 configurations.all {
