--- a/windows/runner/CMakeLists.txt
+++ b/windows/runner/CMakeLists.txt
@@ -19,14 +19,12 @@ add_dependencies(${BINARY_NAME} flutter_assemble)
 
 add_custom_command(
   TARGET ${BINARY_NAME} PRE_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/../bin/msvcp140.dll" "$<TARGET_FILE_DIR:${BINARY_NAME}>/msvcp140.dll"
-  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/../bin/vcruntime140.dll" "$<TARGET_FILE_DIR:${BINARY_NAME}>/vcruntime140.dll"
-  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/../bin/vcruntime140_1.dll" "$<TARGET_FILE_DIR:${BINARY_NAME}>/vcruntime140_1.dll"
+  COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/../bin/" "$<TARGET_FILE_DIR:${BINARY_NAME}>"
 )
 
 set(MPV_SHARED_LIB "${CMAKE_BINARY_DIR}/mpv-2.dll")
 
-if (NOT EXISTS "${MPV_SHARED_LIB}")
+if(NOT EXISTS "${MPV_SHARED_LIB}")
   file(
     DOWNLOAD
     "https://api.github.com/repos/alexmercerind/harmonoid-custom-codec/releases/assets/56309670"
@@ -40,7 +38,6 @@ endif()
 add_custom_command(
   TARGET ${BINARY_NAME} POST_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy "${MPV_SHARED_LIB}" "$<TARGET_FILE_DIR:${BINARY_NAME}>/mpv-2.dll"
-  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/../bin/smtc-win32.dll" "$<TARGET_FILE_DIR:${BINARY_NAME}>/smtc-win32.dll"
   WORKING_DIRECTORY "${CMAKE_BINARY_DIR}"
   DEPENDS "${LIBMPV_ARCHIVE}"
 )
