--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,7 @@ dependencies:
       ref: master
 
 dependency_overrides:
+  ffi: 1.1.0
   libmpv:
     path: external/libmpv.dart
   safe_session_storage:
