build(fix): windows fonts stripping & android compileSdkVersion

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,7 +27,7 @@ jobs:
           flutter-version: "3.0.0"
           channel: "stable"
 
-      - run: rmdir /Q /S "assets/fonts"
+      - run: rmdir /s /q "assets/fonts"
       - run: mkdir "assets/fonts"
 
       - run: flutter config --enable-windows-desktop
