--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,12 +72,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "net.sourceforge.streamsupport:android-retrofuture:1.7.2"
-}
-
-configurations.all {
-    resolutionStrategy {
-        force 'androidx.core:core:1.6.0'
-        force 'androidx.core:core-ktx:1.6.0'
-        force 'androidx.appcompat:appcompat:1.3.1'
-    }
+    implementation "androidx.core:core-splashscreen:1.0.0"
 }
