--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "external/media_library"]
 	path = external/media_library
 	url = https://github.com/alexmercerind/media_library.git
+[submodule "assets/translations"]
+	path = assets/translations
+	url = https://github.com/harmonoid/translations.git
