build: bundle tagger

--- a/pubspec.linux.yaml
+++ b/pubspec.linux.yaml
@@ -152,6 +152,7 @@ flutter:
     - assets/images/
     - assets/translations/
     - assets/preloaded_visuals/
+    - assets/platform/
   fonts:
     - family: "Inter"
       fonts:
