--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,7 @@ dependencies:
     git:
       url: https://github.com/alexmercerind/flutter_lyric.git
       ref: master
+  flutter_svg: ^1.1.4
 
 dependency_overrides:
   ffi: 1.1.0
