--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -103,6 +103,7 @@ jobs:
         run: echo ${{ steps.vars.outputs.sha_short }}
       - uses: subosito/flutter-action@v1
         with:
+          flutter-version: "3.0.5"
           channel: "stable"
       - run: sudo apt-get update
       - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev mpv libmpv-dev dpkg-dev rpm
@@ -182,6 +183,7 @@ jobs:
         run: echo ${{ steps.vars.outputs.sha_short }}
       - uses: subosito/flutter-action@v1
         with:
+          flutter-version: "3.0.5"
           channel: "stable"
 
       - name: Create Key Store
